test: migrate to JUnit 5 and AssertJ, modernize test syntax